--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -7,11 +7,25 @@
     & + .question {
         margin-top: 8px;
     }
+
+    
+    &.highlighted {
+        background: #f4f0ff;
+        border: 1px solid #835afd;
+        
+        footer .user-info span {
+            color: #29292e
+        }
+    }
     
     p {
         color: #29292e;
     }
     
+    &.answered {
+        background: #dbdcdd;
+    }
+
     footer {
         display: flex;
         justify-content: space-between;
@@ -33,6 +47,11 @@
                 color: #737380;
                 font-size: 14px;
             }
+        }
+
+        > div {
+            display: flex;
+            gap: 16px;
         }
 
         button {
